# drone-pose-control

runtime/cpp/pose_estimation/yolov8_pose/: CMakeLists.txt  get_sources.sh  yolov8pose_example.cpp  yolov8pose_postprocess.cpp  yolov8pose_postprocess.hpp
runtime/cpp/pose_estimation/yolov8_pose/common/: math.hpp  tensors.hpp
